kubernetes/vms/opnsense/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense-mgmt
  namespace: vms
  labels:
    app: opnsense
spec:
  type: ClusterIP
  selector:
    kubevirt.io/vm: opnsense-firewall
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-ingress
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: vms-opnsense-insecure-transport@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: opnsense.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opnsense-mgmt
                port:
                  number: 443
